infra/homelab/apps/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  selector:
    app: metabase
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
